--- a/app.html
+++ b/app.html
@@ -83,11 +83,29 @@
       scrollbar-width:thin;
     }
 
-    .pill{
-      padding:8px 10px;border-radius:999px;border:1px solid var(--line);
-      background:rgba(255,255,255,.76);font-size:12px;color:var(--muted);
-      display:inline-flex;gap:8px;align-items:center;white-space:nowrap
-    }
+    /* HERO VALUE BUTTON STYLE */
+.pill{
+  padding:12px 18px;
+  border-radius:999px;
+  border:1px solid rgba(14,165,164,.35);
+  background:linear-gradient(135deg, rgba(14,165,164,.18), rgba(79,70,229,.18));
+  font-size:13px;
+  font-weight:800;
+  color:var(--txt);
+  box-shadow:0 8px 20px rgba(14,165,164,.15);
+  transform:translateY(0);
+  transition:all .18s ease;
+}
+
+/* Make them feel alive */
+.pill:hover{
+  transform:translateY(-2px);
+  box-shadow:0 12px 28px rgba(14,165,164,.25);
+}
+.pill{
+  letter-spacing:.2px;
+}
+
     .pill.ok{border-color:rgba(14,165,164,.30);background:rgba(14,165,164,.10);color:var(--txt)}
     .pill.warn{border-color:rgba(245,158,11,.30);background:rgba(245,158,11,.10);color:var(--txt)}
     .pill.bad{border-color:rgba(239,68,68,.30);background:rgba(239,68,68,.10);color:var(--txt)}
@@ -312,10 +330,10 @@
 <div class="small">Know your real profit after fees, ads and returns. Reverse = target profit → required price. Bulk = test multiple items fast.</div>
 
 <div style="display:flex;gap:8px;flex-wrap:wrap;margin:10px 0 0">
-  <span class="pill ok">Profit clarity</span>
-  <span class="pill">Reverse pricing</span>
-  <span class="pill">Bulk testing</span>
-  <span class="pill">Competitor positioning</span>
+  <button class="pill ok" type="button">Profit clarity</button>
+  <button class="pill ok" type="button">Reverse pricing</button>
+  <button class="pill ok" type="button">Bulk testing</button>
+  <button class="pill ok" type="button">Competitor positioning</button>
 </div>
 
 
